Edited file for merge commit

--- a/server/darius.html
+++ b/server/darius.html
@@ -6,7 +6,7 @@
   </head>
 <body>
 
-<h1>I like candy it makes me sleepy</h1>
+<h1>When im with you, - the weeknd</h1>
 <p>My first paragraph.</p>
 
 </body>
