--- a/skatehub/src/pages/login/login.html
+++ b/skatehub/src/pages/login/login.html
@@ -4,16 +4,17 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>login</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
 <ion-content padding>
+  <div>
   <form (ngSubmit)="loginForm()">
      <ion-item>
        <ion-label floating color ="primary">Enter Username</ion-label>
@@ -27,4 +28,5 @@
        <button ion-button strong round block outline type="submit">Login</button>
      </div>
    </form>
+ </div>
 </ion-content>
