--- a/skatehub/src/pages/login/login.html
+++ b/skatehub/src/pages/login/login.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <div>
+  <div class = "loginform">
   <form (ngSubmit)="loginForm()">
      <ion-item>
        <ion-label floating color ="primary">Enter Username</ion-label>
