--- a/skatehub/src/pages/login/login.html
+++ b/skatehub/src/pages/login/login.html
@@ -38,8 +38,8 @@
    <ion-row justify-content-center padding>
      <ion-item padding>
        <!-- <ion-label color ="light">Enter Password</ion-label> -->
-       
-       <ion-input type="text" placeholder="Password" [(ngModel)]="password" name="password #password" ></ion-input>
+
+       <ion-input type="password" placeholder="Password" [(ngModel)]="password" name="password #password" ></ion-input>
 
      </ion-item>
    </ion-row>
@@ -50,7 +50,7 @@
      </button>
    </div>
    <ion-row style="margin-top: 45%; background-color: #222; opacity: .6; height: 35px;" justify-content-center>
-     <p no-padding style="color: #F5F5F5; font-weight: bold; margin-top: 5px;">Ready To Skate? Sign Up</p>
+     <p no-padding style="color: #F5F5F5; font-weight: bold; margin-top: 5px;">Ready To Skate? <a [navPush] = "registerPage">Sign Up</a></p>
    </ion-row>
    <!-- </form> -->
  <!-- </div> -->
