--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -14,10 +14,10 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p -->
-<ion-tabs>
+<!-- <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="RegisterPage" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="LoginPage" tabIcon="information-circle"></ion-tab>
-  <!-- <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab> -->
-</ion-tabs>
+  <!-- <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab> >
+</ion-tabs> -->
 
 </ion-content>
