--- a/skatehub/src/pages/tabs/tabs.html
+++ b/skatehub/src/pages/tabs/tabs.html
@@ -1,3 +1,13 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Search" tabIcon="search"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Post" tabIcon="add-circle"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Navigate" tabIcon="navigate"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Profile" tabIcon="person"></ion-tab>
 </ion-tabs>
+
+<!-- tab1Root = HomePage;
+tab2Root = SearchPage;
+tab3Root = PostPage;
+tab4Root = NavigatePage;
+tab5Root = ProfilePage; -->
