--- a/skatehub/src/pages/login/login.html
+++ b/skatehub/src/pages/login/login.html
@@ -44,7 +44,7 @@
      </ion-item>
    </ion-row>
    <div text-right style="margin-top: 3%; padding: 10px;">
-     <button ion-button icon-end style="width: 50%;" strong (tap) = "loginForm()" [navPush] = "tabsPage">
+     <button ion-button icon-end style="width: 50%;" strong (tap) = "loginForm()">
        Lets Skate
        <ion-icon style="font-size: 2.5em;" name="arrow-round-forward" color ="white"></ion-icon>
      </button>
