Token authentication on all of the pages, readjusted the splash screen

--- a/skatehub/src/pages/login/login.html
+++ b/skatehub/src/pages/login/login.html
@@ -13,13 +13,13 @@
 </ion-header> -->
 
 <!-- SPLASH SCREEN -->
-<div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
+<!-- <div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
   <div class="flb">
     <div class="Aligner-item Aligner-item--top"></div>
     <img src="../assets/imgs/SKlogowhite.png">
     <div class="Aligner-item Aligner-item--bottom"></div>
   </div>
-</div>
+</div> -->
 <!-- SPLASH SCREEN END -->
 
 <ion-content >
