Began work on fleshing out the profile.html and profile.ts

--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -14,5 +14,12 @@
 
 
 <ion-content padding>
-
+  <button ion-button color=dark ion-button block strong (tap) = "profilePage()"> My Profile </button>
+  <button ion-button color=dark ion-button block strong (tap) = "mySpotsPage()"> My Spots </button>
+  <button ion-button color=dark ion-button block strong (tap) = "friendsPage()"> Friends </button>
+  <button ion-button color=dark ion-button block strong (tap) = "invitesPage()"> Invites </button>
+  <button ion-button color=dark ion-button block strong (tap) = "savedSpotsPage()"> Saved Spots </button>
+  <button ion-button color=dark ion-button block strong (tap) = "settingsPage()"> Settings </button>
+  <button ion-button color=dark ion-button block strong (tap) = "logOutPage()"> Log Out </button>
+  <!--button ion-button color=dark ion-button block strong (tap) = "aboutPage()"> About </button!-->
 </ion-content>
