Designed register page some more, and added header with icons for messaging and filter, plus made command for when you click skatehub to scroll back to top

--- a/skatehub/src/pages/login/login.html
+++ b/skatehub/src/pages/login/login.html
@@ -24,7 +24,7 @@
 
 <ion-content >
   <!-- <div class = "loginform"> -->
-  <!-- <form (ngSubmit)="loginForm()"> -->
+  <!-- <form (ngSubmit)="loginForm()"> <!--  -->>
     <ion-row style="margin-top: 45%;" justify-content-center>
       <h1 style="color: #E0E0E0; font-weight: 900;">SkateHub</h1>
     </ion-row>
@@ -49,7 +49,7 @@
        <ion-icon style="font-size: 2.5em;" name="arrow-round-forward" color ="white"></ion-icon>
      </button>
    </div>
-   <ion-row style="margin-top: 45%; background-color: #222; opacity: .6; height: 35px;" justify-content-center>
+   <ion-row style="margin-top: 35%; background-color: #222; opacity: .6; height: 35px;" justify-content-center>
      <p no-padding style="color: #F5F5F5; font-weight: bold; margin-top: 5px;">Ready To Skate? <a [navPush] = "registerPage">Sign Up</a></p>
    </ion-row>
    <!-- </form> -->
