Make filter in home page to be an ID for styling

--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -2,7 +2,7 @@
 <ion-header>
   <ion-navbar color="white">
     <ion-buttons end right>
-      <button color="black" ion-button icon-only>
+      <button id = "filter" color="black" ion-button icon-only>
         Filter
         <ion-icon name="ios-arrow-down"></ion-icon>
       </button>
