--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -12,25 +12,28 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button icon-left block strong (tap) = "mySpotsPage()" color = "dark">
-    <ion-icon name = "arrow-dropdown"></ion-icon>
+  <button ion-button icon-left block strong (tap) = "profilePage()" color = "dark">
+    <ion-icon name = "archieve"></ion-icon>
     My Spots
   </button>
-  <button ion-button icon-left block strong (tap) = "friendsPage()" color = "dark">
+  <button ion-button icon-left block strong (tap) = "profilePage()" color = "dark">
     <ion-icon name = "ios-people"></ion-icon>
     Friends
   </button>
-  <button ion-button icon-left block strong (tap) = "invitesPage()" color = "dark">
+  <button ion-button icon-left block strong (tap) = "profilePage()" color = "dark">
     <ion-icon name = "paper-plane"></ion-icon>
     Invites
   </button>
-  <button ion-button icon-left block strong (tap) = "savedSpotsPage()" color = "dark">
+  <button ion-button icon-left block strong (tap) = "profilePage()" color = "dark">
     <ion-icon name = "checkmark-circle-outline"></ion-icon>
     Saved Spots
   </button>
-  <button ion-button icon-left block strong (tap) = "settingsPage()" color = "dark">
+  <button ion-button icon-left block strong (tap) = "profilePage()" color = "dark">
     <ion-icon name = "settings"></ion-icon>
     Settings
   </button>
-
+  <button ion-button icon-left block strong (tap) = "profilePage()" color = "dark">
+    <ion-icon name = "exit"></ion-icon>
+    Logout
+  </button>
 </ion-content>
