updated my spots button on profile page

--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -13,7 +13,7 @@
 
 <ion-content padding>
   <button ion-button icon-left block strong (tap) = "profilePage()" color = "dark">
-    <ion-icon name = "archieve"></ion-icon>
+    <ion-icon name = "archive"></ion-icon>
     My Spots
   </button>
   <button ion-button icon-left block strong (tap) = "profilePage()" color = "dark">
