--- a/skatehub/src/index.html
+++ b/skatehub/src/index.html
@@ -17,7 +17,7 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAto_9hG5boIFntufaIAUk6n9trhauRQN0&callback=initMap"></script> 
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
