--- a/skatehub/src/pages/navigate/navigate.html
+++ b/skatehub/src/pages/navigate/navigate.html
@@ -5,14 +5,14 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>navigate</ion-title>
+    <ion-title>Map</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+  <h3> My Google Maps Demo</h3>
+  <div id="map"></div>
 
 </ion-content>
