Error fixed, comments added

--- a/skatehub/src/index.html
+++ b/skatehub/src/index.html
@@ -17,7 +17,9 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAto_9hG5boIFntufaIAUk6n9trhauRQN0&callback=initMap"></script> 
+
+  <!-- don't use &callback=initMap\\https://developers.google.com/maps/documentation/javascript/examples/map-sync-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAto_9hG5boIFntufaIAUk6n9trhauRQN0"></script>
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
