--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -66,7 +66,7 @@
         <ion-col col-4>
         </ion-col>
         <ion-col >
-          <button color="primary" ion-button clear icon-left strong>
+          <button color="primary" ion-button clear icon-left strong (tap)="openNavigation(spot)">
             <ion-icon name="pin"></ion-icon>
             Skate
           </button>
