--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -42,7 +42,7 @@
               <!-- style="border-radius: 50%; width: 50px; height: 50px;" -->
              </ion-avatar>
             <h3><strong>{{spot.username}}</strong></h3>
-            <ion-icon name = "more" item-end></ion-icon>
+            <ion-icon name = "more" item-end (tap) = "openDetailedAction(spot)"></ion-icon>
           </ion-item>
         </ion-col>
         <!-- <ion-col col-6>
