--- a/skatehub/src/pages/search/search.html
+++ b/skatehub/src/pages/search/search.html
@@ -4,15 +4,41 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header no-border>
 
-  <ion-navbar>
-    <ion-title>search</ion-title>
+  <ion-navbar color="primary">
+    <form (ngSubmit) = "filter();">
+      <ion-searchbar
+     [(ngModel)]="searchTerm"
+     name = "searchTerm"
+     type = "search"
+     placeholder="Search SkateHub"
+     (ionInput)="filter(); hide = true; hideSearch = false;">
+     </ion-searchbar>
+    </form>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content >
+  <ion-list *ngIf="!start && userResultArr.length > 0 && !hideSearch">
+    <ion-list-header>People</ion-list-header>
+    <ion-item *ngFor= "let user of userResultArr" detail-push>
+      <ion-avatar item-start>
+        <img [src]="user.avatar">
+      </ion-avatar>
+      <h2>{{user.username}}</h2>
+    </ion-item>
+  </ion-list>
+  <ion-item-divider *ngIf="!start && !hideSearch"></ion-item-divider>
+  <ion-list *ngIf="!start && spotsResultArr.length > 0 && !hideSearch">
+    <ion-list-header>Skate Spots</ion-list-header>
+    <ion-item *ngFor= "let spot of spotsResultArr" detail-push>
+      <ion-thumbnail item-start>
+        <img [src]="spot.images[0]">
+      </ion-thumbnail>
+      <h2>{{spot.name}}</h2>
+    </ion-item>
+  </ion-list>
 </ion-content>
