--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -1,15 +1,3 @@
-<!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<!-- <ion-header>
-
-  <ion-navbar>
-    <ion-title>Profile</ion-title>
-  </ion-navbar>
-</ion-header> -->
 
 <ion-content>
   <!-- <ion-row justify-content-center class="top-spacing">
@@ -19,19 +7,26 @@
       <ion-icon ios="md-create" color="primary" *ngIf="imageChosen == 0" (tap)="chooseImage()" style="font-size: 25px;"></ion-icon>
       <ion-icon name="remove-circle" color="danger" *ngIf="imageChosen == 1" (tap)="clear()" style="font-size: 30px;"></ion-icon>
   </ion-row> -->
+<!-- ^^^^ above comments are going to be necessary in the future maybe - DON'T DELETE :) -->
+
+  <!-- Green background - START -->
   <div class ="square-background">
   </div>
+  <!-- Green background - END -->
+  <!-- User avatar and info - START -->
   <ion-row justify-content-center class="top-spacing">
       <ion-avatar *ngIf="user" class= "profile-shift">
         <img [src]="user.avatar" class = "avatar-border">
       </ion-avatar>
-      <ion-icon ios="md-create" color="white" style="font-size: 25px; position: relative;"></ion-icon>
+      <ion-icon name="create" mode="android" ios="md-create" style="font-size: 25px; position: relative; color: #ffffff;"></ion-icon>
       <!-- <ion-icon name="remove-circle" color="danger" style="font-size: 30px;"></ion-icon> -->
   </ion-row>
     <h4 *ngIf="user" no-margin text-center ion-text color = "white" style = "position: relative;">{{user.username}}</h4>
     <p *ngIf="user && (user.stance)" text-center ion-text color = "white" no-margin style = "position: relative;"> Stance: {{user.stance}} </p>
     <p *ngIf="user && (user.stance == '' || !user.stance)" text-center ion-text color = "white" no-margin style = "position: relative;"> Set stance! </p>
+<!-- User avatar and info - END -->
 
+<!-- Bunch of buttons - START -->
   <button class = "top-spacing-buttons" ion-button icon-left block strong (tap) = "mySpotsPage()" color = "grey">
     <ion-icon name = "archive"></ion-icon>
     My Spots
@@ -55,20 +50,11 @@
     <ion-icon name = "settings"></ion-icon>
     Settings
   </button>
-  <button ion-button icon-left block strong (tap) = "logout()" color = "grey">
+  <!-- Bunch of buttons - END -->
+  <!-- Logout button - START -->
+  <button ion-button icon-left block strong style="background-color: transparent; color: #f53d3d;" (tap) = "logout()" color = "danger">
     <ion-icon name = "exit"></ion-icon>
     Logout
   </button>
-  <!-- <ion-list color="black" class = "top-spacing-buttons">
-    <ion-item color="black" (tap) = "mySpotsPage()">
-      <ion-icon name="archive" item-start></ion-icon>
-        My Spots
-      <ion-badge color="white" item-end>25</ion-badge>
-    </ion-item>
-    <ion-item color="black" (tap) = "friendsPage()">
-      <ion-icon name="people" item-start></ion-icon>
-        Friends
-      <ion-badge color="white" item-end>4</ion-badge>
-    </ion-item>
-  </ion-list> -->
+  <!-- Logout button - END -->
 </ion-content>
