--- a/skatehub/src/pages/detailed-spot/detailed-spot.html
+++ b/skatehub/src/pages/detailed-spot/detailed-spot.html
@@ -1,42 +1,39 @@
-<!--
-  Generated template for the DetailedSpotPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-
+<!-- Header displaying the name of the skate spot -->
 <ion-header no-border>
   <ion-navbar color="primary">
-    <ion-title *ngIf = "spot" style="border: 1px solid #ccc" >{{spot.name}}</ion-title>
+    <ion-title *ngIf = "spot" >{{spot.name}}</ion-title>
   </ion-navbar >
 </ion-header>
 
+<!-- End of header -->
 
 <ion-content padding>
+  <!-- Top part of the skate spot (user profile pic and their username, either a trash can icon or "more" icon)  -->
   <ion-item no-lines>
     <!-- We'll need a function that pushes a profile page if the avatar is tapped (tap) = "viewProfile" -->
      <ion-avatar class ="border-green" item-start *ngIf = "spot">
       <img [src]="spot.avatar" alt = "">
-      <!-- style="border-radius: 50%; width: 50px; height: 50px;" -->
      </ion-avatar>
      <h3 *ngIf = "spot"><strong>{{spot.username}}</strong></h3>
      <ion-icon *ngIf = "!isUser" name = "more" item-end (tap) = "openAction()"></ion-icon>
      <ion-icon *ngIf = "isUser" name = "trash" item-end color = "danger"></ion-icon>
-
-
-
   </ion-item>
+<!-- End of top part of skate spot -->
 
+<!-- Img slides -->
   <ion-row>
     <ion-col col-12>
-  <ion-slides *ngIf = "spot">
-  <ion-slide *ngFor="let pic of spot.images">
-    <img style = "max-height: 300px; width: auto;" [src] = "pic">
-  </ion-slide>
-</ion-slides>
-</ion-col>
+      <ion-slides *ngIf = "spot">
+        <ion-slide *ngFor="let pic of spot.images">
+          <img style = "height: 385px; width: auto;" [src] = "pic">
+        </ion-slide>
+      </ion-slides>
+    </ion-col>
 </ion-row>
 
+<!-- End Img slides -->
+
+<!-- Skate spot types -->
 <ion-row style="width: 100%;" no-wrap>
   <ion-col align-self-center text-center>
     <!-- <p *ngFor="let type of spot.types; let x = index;">
@@ -44,22 +41,26 @@
     </p> -->
       <ion-row wrap *ngIf = "spot">
         <ion-col *ngFor= "let type of spot.types;" col-4>
-            <ng-container >{{type}}</ng-container>
+            <img [src] = "type" style="height: 40px;">
         </ion-col>
       </ion-row>
   </ion-col>
 </ion-row>
 
+<!-- End skate spot types -->
+
+<!-- Skate spot Description -->
 <h3>Description</h3>
 <ion-row *ngIf = "spot">
-  <ion-col *ngIf = "!spot.desciption || spot.desciption == '' " >
+  <ion-col *ngIf = "!spot.description || spot.description == '' " >
     No Description Provided
   </ion-col>
-  <ion-col *ngIf = "spot.desciption != '' " >
-    {{spot.desciption}}
+  <ion-col *ngIf = "spot.description != '' " >
+    {{spot.description}}
   </ion-col>
 </ion-row>
 
+<!-- End skate spot description -->
 
 <ion-row *ngIf = "spot">
   <ion-icon style = "font-size: 5em;" *ngIf = "spot.lightingLevel == 'yes'" name = "sunny-outline">
