Fixed positioning of homepage SkateHub and post New Spot headers for android devices

--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -8,11 +8,13 @@
       </button>
     </ion-buttons>
 
-    <ion-title (tap)="scrollToTop()">SkateHub</ion-title>
+    <ion-title id = "SkateHub"(tap)="scrollToTop()">
+    SkateHub
+    </ion-title>
 
     <ion-buttons start left>
       <button color="white" ion-button icon-only>
-        <ion-icon name="ios-chatbubbles"></ion-icon>
+        <ion-icon id = "bubbles" name="ios-chatbubbles"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
