Fixed sunny icon not showing on android

--- a/skatehub/src/pages/detailed-spot/detailed-spot.html
+++ b/skatehub/src/pages/detailed-spot/detailed-spot.html
@@ -63,7 +63,7 @@
 <!-- End skate spot description -->
 
 <ion-row *ngIf = "spot">
-  <ion-icon style = "font-size: 5em;" *ngIf = "spot.lightingLevel == 'yes'" name = "sunny-outline">
+  <ion-icon style = "font-size: 5em;" *ngIf = "spot.lightingLevel == 'yes'" name = "ios-sunny-outline">
   </ion-icon>
   <ion-icon style = "font-size: 5em;" *ngIf = "spot.lightingLevel == 'no'" name = "sunny">
   </ion-icon>
