--- a/skatehub/src/pages/friends/friends.html
+++ b/skatehub/src/pages/friends/friends.html
@@ -5,14 +5,89 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
     <ion-title>Friends</ion-title>
-  </ion-navbar>
-
+    </ion-navbar>
 </ion-header>
 
+<ion-content class="list-avatar-page">
 
-<ion-content padding>
+    <ion-list>
+  <ion-item>
+    <ion-avatar item-start>
+      <img src="assets/imgs/profileGeneric.jpg">
+    </ion-avatar>
+    <h2>Username</h2>
+    <ion-badge item-end>skating!</ion-badge>
+      </ion-item>
+</ion-list>
 
-</ion-content>
+<ion-list>
+<ion-item>
+<ion-avatar item-start>
+  <img src="assets/imgs/profileGeneric.jpg">
+</ion-avatar>
+<h2>Username</h2>
+<ion-badge item-end>skating!</ion-badge>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+<ion-item>
+<ion-avatar item-start>
+  <img src="assets/imgs/profileGeneric.jpg">
+</ion-avatar>
+<h2>Username</h2>
+<ion-badge item-end>skating!</ion-badge>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+<ion-item>
+<ion-avatar item-start>
+  <img src="assets/imgs/profileGeneric.jpg">
+</ion-avatar>
+<h2>Username</h2>
+<ion-badge item-end>skating!</ion-badge>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+<ion-item>
+<ion-avatar item-start>
+  <img src="assets/imgs/profileGeneric.jpg">
+</ion-avatar>
+<h2>Username</h2>
+<ion-badge item-end>skating!</ion-badge>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+<ion-item>
+<ion-avatar item-start>
+  <img src="assets/imgs/profileGeneric.jpg">
+</ion-avatar>
+<h2>Username</h2>
+<ion-badge item-end>skating!</ion-badge>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+<ion-item>
+<ion-avatar item-start>
+  <img src="assets/imgs/profileGeneric.jpg">
+</ion-avatar>
+<h2>Username</h2>
+<ion-badge item-end>skating!</ion-badge>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+<ion-item>
+<ion-avatar item-start>
+  <img src="assets/imgs/profileGeneric.jpg">
+</ion-avatar>
+<h2>Username</h2>
+<ion-badge item-end>skating!</ion-badge>
+  </ion-item>
+</ion-list>
