Added inbox page

--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -12,7 +12,7 @@
     SkateHub
     </ion-title>
 
-    <ion-buttons start left>
+    <ion-buttons start left (tap) = "openInbox()">
       <button color="white" ion-button icon-only>
         <ion-icon id = "bubbles" name="ios-chatbubbles"></ion-icon>
       </button>
