--- a/skatehub/src/pages/inbox/inbox.html
+++ b/skatehub/src/pages/inbox/inbox.html
@@ -6,11 +6,11 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-buttons start left (tap) = "dismiss()">
+    <!-- <ion-buttons start left (tap) = "dismiss()">
       <button color="danger" ion-button icon-only>
-        <ion-icon class = "fs-16" name="close"></ion-icon>
+        <ion-icon class = "fs-16" name="arrow-down"></ion-icon>
       </button>
-    </ion-buttons>
+    </ion-buttons> -->
     <ion-title>Messages</ion-title>
   </ion-navbar>
 
