Using a popover, the filter items appear... doesn't filter yet

--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -1,10 +1,9 @@
 <!-- Start header -->
 <ion-header no-border>
   <ion-navbar color="primary">
-    <ion-buttons end right>
-      <button id = "filter" color="white" ion-button icon-right>
-        Filter
-        <ion-icon name="ios-arrow-down"></ion-icon>
+    <ion-buttons end right (tap)="presentPopover($event)">
+      <button id = "filter" color="white" ion-button icon-only>
+        <ion-icon name="options"></ion-icon>
       </button>
     </ion-buttons>
 
